--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 </head>
 <body>
     <div id="App"></div>
-    <script type="JavaScript" src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
